feat(ui)!: add new game settings view + more modularity + strings + build bump

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -8639,6 +8639,9 @@
         }
       }
     },
+    "Container Settings" : {
+
+    },
     "Containers" : {
       "localizations" : {
         "af" : {
@@ -11132,6 +11135,7 @@
 
     },
     "Engine (Wine)" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
