refactor: separate wine extensions from container-related logic + build bump + strings update

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -8915,6 +8915,9 @@
     "Documentation" : {
 
     },
+    "Donate to the developer" : {
+
+    },
     "Done" : {
       "localizations" : {
         "af" : {
