chore: resolve swiftlint warnings

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -11634,6 +11634,16 @@
     "Filters" : {
 
     },
+    "Finished %@ \"%@\"." : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Finished %1$@ \"%2$@\"."
+          }
+        }
+      }
+    },
     "Finished moving \"%@\"." : {
 
     },
