chore: strings update

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -201,6 +201,9 @@
         }
       }
     },
+    "\"%@\" is now ready to be played." : {
+
+    },
     "\"An open-source macOS game launcher with the ability to play Windows games through a custom implementation of Apple's Game Porting Toolkit — supporting multiple platforms.\"" : {
 
     },
@@ -3493,12 +3496,12 @@
     "A list of Apple SLAs may be found here." : {
 
     },
-    "A new version of Mythic Engine (%@ has released.\nYou're currently using %@." : {
+    "A new version of Mythic Engine (%@) has released.\nYou're currently using %@." : {
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "new",
-            "value" : "A new version of Mythic Engine (%1$@ has released.\nYou're currently using %2$@."
+            "value" : "A new version of Mythic Engine (%1$@) has released.\nYou're currently using %2$@."
           }
         }
       }
@@ -25325,6 +25328,9 @@
       }
     },
     "Successfully removed Mythic Engine." : {
+
+    },
+    "Successfully verified \"%@\"." : {
 
     },
     "Support" : {
