refactor: wine interface, better process handling, better logging, more modular code + strings update

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -19384,6 +19384,9 @@
         }
       }
     },
+    "Process execution was unsuccessful. (Non-zero exit code)" : {
+
+    },
     "Progress:" : {
       "localizations" : {
         "af" : {
